fix: update plausible to use subdomain

--- a/apps/app/index.html
+++ b/apps/app/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#ffffff" />
     <script
       defer
-      data-domain="vexilla.dev"
+      data-domain="app.vexilla.dev"
       src="https://plausible.io/js/script.js"
     ></script>
   </head>
